estilos para esconder una columna de una tabla

--- a/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
@@ -117,3 +117,13 @@
 .transparency{
 	background-color: red;
 }
+
+/* Para Firefox */
+.miTablaInvisible tr>td:first-child{
+	display:none;
+}
+
+/* Para IE */
+.miTablaInvisible .cg1{ 
+	display: none;
+}
