se agrego un estilo alignLeft

--- a/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
@@ -82,6 +82,10 @@
 	text-align: right;
 }
 
+.alingLeft{
+	text-align: left;
+}
+
 .ccTable{
 	border:1px solid white;
 	width: 100%;
@@ -127,3 +131,4 @@
 .miTablaInvisible .cg1{ 
 	display: none;
 }
+
