--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -223,7 +223,6 @@ A {
 	height: 24px;
 }
 
-
 .gwt-BuscarCuentaResultPanel .resultTableWrapper {
 	height: 200px;
 	overflow: auto;
@@ -629,7 +628,8 @@ color:white;
 font-weight:normal;
 }
 
-input[disabled], input[readonly], select[disabled], select[readonly], checkbox[disabled], checkbox[readonly], textarea[disabled], textarea[readonly]
+.gwt-TextBox-readonly, .gwt-TextArea-readonly, input[disabled], input[readonly], select[disabled], 
+	select[readonly], checkbox[disabled], checkbox[readonly], textarea[disabled], textarea[readonly]
 {
  background-color: #DEDEDE;
  color: #000000;
