--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -56,10 +56,9 @@ rgm
 .icon-lapiz { background-position: -48 0;}
 .icon-locked { background-position: -64 0;}
 .icon-lupa { background-position: -80 0;}
-.icon-silvioSoldan { background-position: -96 0;}
+.icon-silvioSoldan { background-position: -96 0; cursor: pointer;}
 .icon-tildeVerde { background-position: -112 0; }
-.icon-vistaPreliminar { background-position: -128 0;
-	cursor: pointer;}
+.icon-vistaPreliminar { background-position: -128 0; cursor: pointer;}
 .icon-word { background-position: -144 0;}
 .icon-nuevo { background-position: -160 0;}
 .icon-comprobar-negro { background-position: -176 0;}
