--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -66,7 +66,7 @@ rgm
 .icon-comprobar-verde { background-position: -208 0;}
 .icon-locked-other { background-position: -224 0;}
 .icon-scoring { background-position: -240 0;}
-.icon-oportunidad { background-position: -256 0; cursor: pointer;}
+.icon-oportunidad { background-position: -256 0;}
 .icon-prospect { background-position: -272 0; cursor: pointer;}
 .icon-led-verde { background-position: -288 0; cursor: pointer;}
 .icon-led-amarillo { background-position: -304 0; cursor: pointer;}
