estilo para pop up de no normalizar

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -646,6 +646,11 @@ font-weight:normal;
 	color: #A83C56;
 }
 
+.fontNormal {
+	font-weight:normal;
+	margin-left: 5;
+}
+
 /*.table-external {
 border:1px solid gray;
 clear:left;
