se agrego el puntero manito al icono Refresh de Opp en Curso

--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -74,6 +74,6 @@ rgm
 .icon-green-flag { background-position: -336 0;}
 .icon-yellow-flag { background-position: -352 0;}
 .icon-red-flag { background-position: -368 0;}
-.icon-refresh { background-position: -386 0;}
+.icon-refresh { background-position: -386 0; cursor: pointer;}
 
 
