Se agregó la funcionalidad para aplicar descuentos a las lineas de solicitud de servicio.

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -762,3 +762,24 @@ margin:8px;
 	border: 1px solid #BCBCBC;
 	background-color: #ECEBEB;
 }
+
+.gwt-DescuentoDialog .panel {
+	height:190px;
+	width:300px;
+}
+
+.gwt-DescuentoDialog .textBoxDesc {
+	margin-top: 10px;
+	margin-left: 20px;
+	width: 140px;
+}
+
+.gwt-DescuentoDialog .labelDesc {
+	margin-top: 10px;
+	margin-left: 5px;
+}
+
+.gwt-DescuentoDialog .tableDesc {
+	margin-top: 10px;
+	margin-left: 5px;
+}
