--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -37,7 +37,7 @@ rgm
 .icon-cancel, .icon-copiar, .icon-excel, .icon-lapiz, .icon-locked, .icon-lupa, .icon-silvioSoldan, 
 .icon-tildeVerde, .icon-vistaPreliminar, .icon-word, .icon-nuevo, .icon-comprobar-negro, .icon-comprobar-verde,
 .icon-comprobar-rojo, .icon-locked-other, .icon-scoring, .icon-oportunidad, .icon-prospect, .icon-led-verde,
-.icon-led-amarillo, .icon-led-rojo,  .icon-green-flag, .icon-yellow-flag, .icon-red-flag, .icon-refresh {
+.icon-led-amarillo, .icon-led-rojo,  .icon-green-flag, .icon-yellow-flag, .icon-red-flag, .icon-refresh, .icon-bolsaPesos {
 	width: 16px;
 	height: 16px;
 	background-image: url("images/icons.gif");
@@ -74,6 +74,6 @@ rgm
 .icon-green-flag { background-position: -336 0;}
 .icon-yellow-flag { background-position: -352 0;}
 .icon-red-flag { background-position: -368 0;}
-.icon-refresh { background-position: -386 0; cursor: pointer;}
-
+.icon-refresh { background-position: -384 0; cursor: pointer;}
+.icon-bolsaPesos {background-position: -400 0; cursor: pointer;}
 
