--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -37,7 +37,8 @@ rgm
 .icon-cancel, .icon-copiar, .icon-excel, .icon-lapiz, .icon-locked, .icon-lupa, .icon-silvioSoldan, 
 .icon-tildeVerde, .icon-vistaPreliminar, .icon-word, .icon-nuevo, .icon-comprobar-negro, .icon-comprobar-verde,
 .icon-comprobar-rojo, .icon-locked-other, .icon-scoring, .icon-oportunidad, .icon-prospect, .icon-led-verde,
-.icon-led-amarillo, .icon-led-rojo,  .icon-green-flag, .icon-yellow-flag, .icon-red-flag, .icon-refresh, .icon-bolsaPesos {
+.icon-led-amarillo, .icon-led-rojo,  .icon-green-flag, .icon-yellow-flag, .icon-red-flag, .icon-refresh, .icon-bolsaPesos,
+.icon-art-chinche, .icon-art-chinche-on {
 	width: 16px;
 	height: 16px;
 	background-image: url("images/icons.gif");
@@ -76,4 +77,6 @@ rgm
 .icon-red-flag { background-position: -368 0;}
 .icon-refresh { background-position: -384 0; cursor: pointer;}
 .icon-bolsaPesos {background-position: -400 0; cursor: pointer;}
+.icon-art-chinche { background-position: -416 0; cursor: pointer;}
+.icon-art-chinche-on { background-position: -432 0; cursor: pointer;} 
 
