Se encontraron entre las hojas de estilo y no en las JSP los colores #A53953 y #A83C56 (Bordó) y no #A53A54 (otra variante de bordó) y se las reemplazó por #E05206 (naranja)

--- a/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAInfocom.css
@@ -42,7 +42,7 @@
 }
 
 .subTitulo .gwt-Label{
-	color:#A83C56 !important;
+	color:#E05206 !important;
 	font-weight:bold !important;
 	margin:4px 0;
 	width:100% !important;	
