--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -76,12 +76,12 @@ A {
 }
 
 .TableRowSelected {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 	cursor: pointer;
 }
 
 .NoPointerTableRowSelected {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 }
 
 /** Fin Estilos tablas */
@@ -284,7 +284,7 @@ A {
 }
 
 .selectedRow td {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 }
 
 .WaitWindow {
