--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -724,7 +724,7 @@ input[disabled],input[readonly],select[disabled],select[readonly],checkbox[disab
 }
 
 .botonReservarTel {
-	color: #A93F59;
+	color: #E05206;
 	font-weight: 600;
 	font-size: 11px;
 	background-image: url("images/btn-ok.gif");
