--- a/src/main/java/ar/com/nextel/sfa/public/buttons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/buttons.css
@@ -27,7 +27,7 @@
 	background: transparent url("images/btn-bkg.gif") no-repeat scroll 0 0;
 	border: none;
 	margin-right: 10px;
-	color: #A93F59;
+	color: #E05206;
 	font-weight: 600;
 	font-size: 11px;
 }
