PrepagoFull 	Mas bordoses 		#CB909E

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -112,7 +112,7 @@ A {
 .submenuPrincipal .gwt-MenuItem {
 	background-color: #FEFEFE;
 	border-bottom: 1px solid #E9E9E9;
-	color: #E05206;
+	color: #7A2D03;
 	display: block;
 	font-size: 10px;
 	font-weight: bold;
