--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -51,7 +51,7 @@ A {
 }
 
 .TableHeader {
-	background-color: #A53953;
+	background-color: #E05206;
 	text-align: center;
 	color: white;
 	font-weight: bold;
@@ -76,17 +76,17 @@ A {
 }
 
 .TableRowSelected {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 	cursor: pointer;
 }
 
 .NoPointerTableRowSelected {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 }
 
 /** Fin Estilos tablas */
 .gwt-HeaderMenu .menu {
-	background-color: #981836;
+	background-color: #E05206;
 	background-image: url(images/toolbar/back-menu-bar.gif);
 	height: 30px;
 	text-align: left;
@@ -99,7 +99,7 @@ A {
 
 .gwt-HeaderMenu .gwt-MenuItem {
 	/**	background-image: url(images/toolbar/back-menu-bar.gif);*/
-	border-right: 1px solid #981836;
+	border-right: 1px solid #E05206;
 	color: #EEEEEE;
 	display: block;
 	font-size: 12px;
@@ -112,7 +112,7 @@ A {
 .submenuPrincipal .gwt-MenuItem {
 	background-color: #FEFEFE;
 	border-bottom: 1px solid #E9E9E9;
-	color: #9E2F49;
+	color: #7A2D03;
 	display: block;
 	font-size: 10px;
 	font-weight: bold;
@@ -187,7 +187,7 @@ A {
 }
 
 .gwt-TitledPanel {
-	border: 1px solid #981836;
+	border: 1px solid #E05206;
 	margin-top: 5px;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -201,7 +201,7 @@ A {
 	margin-left: 0px !IMPORTANT;
 	margin-right: 0px !IMPORTANT;
 	vertical-align: middle;
-	background-color: #981836;
+	background-color: #E05206;
 	background-image: url(images/h1_bkg_desplegable.jpg);
 	background-repeat: repeat-x;
 	text-indent: 5px;
@@ -214,7 +214,7 @@ A {
 }
 
 .header td {
-	background-color: #A53953;
+	background-color: #E05206;
 	color: #FFFFFF;
 	font-weight: bold;
 	text-align: center;
@@ -284,7 +284,7 @@ A {
 }
 
 .selectedRow td {
-	background-color: #EFDAE0;
+	background-color: #F2A57C;
 }
 
 .WaitWindow {
@@ -329,7 +329,7 @@ A {
 
 .gwt-TabBarItem-selected {
 	background-image: url(images/tabs/tab-on.gif) ! IMPORTANT;
-	color: #A83C56 ! IMPORTANT;
+	color: #E05206 ! IMPORTANT;
 }
 
 .gwt-TabBarItem {
@@ -403,7 +403,7 @@ A {
 }
 
 .abmPanel {
-	border: 1px solid #981836;
+	border: 1px solid #E05206;
 	margin-bottom: 8px;
 	width: 100%;
 }
@@ -482,10 +482,10 @@ A {
 .abmPanelVeraz {
 	text-align: left;
 	text-indent: 4px;
-	border: 1px solid #981836;
+	border: 1px solid #E05206;
 	background-color: #FFFFFF;
 	margin-top: 8px;
-	border: 1px solid #981836;
+	border: 1px solid #E05206;
 	margin-bottom: 8px;
 	width: 100%;
 }
@@ -649,7 +649,7 @@ SPAN.info {
 }
 
 .oppEnCursoTitulosLabel {
-	color: #A83C56;
+	color: #E05206;
 	font-weight: bold;
 	margin: 4px 0;
 	width: 100%;
@@ -665,7 +665,7 @@ SPAN.info {
 }
 
 .infocomTituloLabel {
-	color: #A83C56;
+	color: #E05206;
 }
 
 .infocomDescripcionTable {
@@ -700,7 +700,7 @@ input[disabled],input[readonly],select[disabled],select[readonly],checkbox[disab
 }
 
 .msgNoNormalizado {
-	color: #A83C56;
+	color: #E05206;
 }
 
 .fontNormal {
@@ -724,7 +724,7 @@ input[disabled],input[readonly],select[disabled],select[readonly],checkbox[disab
 }
 
 .botonReservarTel {
-	color: #A93F59;
+	color: #E05206;
 	font-weight: 600;
 	font-size: 11px;
 	background-image: url("images/btn-ok.gif");
