--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -787,3 +787,20 @@ margin:8px;
 .gwt-DescuentoDialog td {
 	vertical-align: top;
 }
+
+.portabilidadReplicar{
+	width: 600px;
+	
+	border-bottom: 1px #999 solid;
+	border-right: 1px #999 solid;
+	border-left: 1px #ccc solid;
+	border-top: 1px #ccc solid;
+	overflow: auto;
+	padding-right: 15px;
+	height: 150px;
+	
+}
+
+.portabilidadCheck{
+	font-weight: bold;
+}
