Lucio Fernandez - En este commit se implementó el nuevo requerimiento (req nro2:veraz) para el caso de uso de ABM Caratulas

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -603,6 +603,18 @@ A {
 	width: 90px;
 }
 
+.verazRechazarLabel {
+	color: #FE003E;
+}
+
+.verazRevisarLabel {
+	color: #FFC000;
+}
+
+.verazAceptarLabel {
+	color: #189D21;
+}
+
 .gwt-ItemSolicitudDialog .topBar {
 	border-bottom: 1px #CCC solid;
 	padding: 5px;
