Ger Barrionuevo : Icono de Copiar SS y el estilo cambiado.

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -794,7 +794,7 @@ margin:8px;
 }
 
 .copiarSS {
-	background-image: url(images/btn-table-nuevo.gif);
+	background-image: url(images/btn-copiar-ss.png);
 	width: 115px;
 	margin-top: 5px;
 	position: absolute;
