Lucio Fernandez - Desarrollo de los casos de uso de Busquedas de Solicitudes Use_Case#3_Busqueda_Solicitudes Use_Case#4_Busqueda_Solicitudes_Cliente

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -238,6 +238,15 @@ A {
 	background-color: #FFF;
 	border: 1px solid gray;
 	margin-left: 8px;
+	margin-right: 8px;S
+}
+
+.resultTableWrapperLarge {
+	height: 420px;
+	overflow: auto;
+	background-color: #FFF;
+	border: 1px solid gray;
+	margin-left: 8px;
 	margin-right: 8px;
 }
 
@@ -794,7 +803,7 @@ margin:8px;
 }
 
 .copiarSS {
-	background-image: url(images/btn-copiar-ss.png);
+	background-image: url(images/btn-table-nuevo.gif);
 	width: 115px;
 	margin-top: 5px;
 	position: absolute;
