German Barrionuevo : NII SFA R2 F2 Cierre y Pass Automático , para el requerimiento:  11.

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -823,3 +823,10 @@ margin:8px;
 	color: gray;
 	text-align: center;
 }
+
+.gwt-ConsultarScoringBar {
+	font-family: Verdana, Arial, sans-serif;
+	color: #E05206;
+	width: 100%;
+	font-weight: bold;
+}
