--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -573,6 +573,15 @@ A {
 	height: 100px;
 }
 
+.numerosReservadosTable {
+	border-bottom: 1px #999 solid;
+	border-right: 1px #999 solid;
+	border-left: 1px #ccc solid;
+	border-top: 1px #ccc solid;
+	overflow: auto;
+	height: 100px;
+}
+
 .crearCuentaTabPanel {
 	margin: 16 0 40 0px;
 }
